[package]
name = "walletCopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "1.17.7"

[dev-dependencies]
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"